--- a/resources/less/mod-admin.less
+++ b/resources/less/mod-admin.less
@@ -1,5 +1,7 @@
 /* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-============================ A D M I N   B L O G ============================== */
+============================ A D M I N   B L O G ==============================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+
 .admin-container{
     width: 100%;
     max-height: 800px;
