--- a/resources/less/mod-header.less
+++ b/resources/less/mod-header.less
@@ -8,7 +8,7 @@
     min-width: 320px;
     background: linear-gradient(0.2turn, @complement-color, @third-color);
     color: @fg-color;
-    .box-shadow;
+    .section-shadow;
 }
 
 #header-mobile-container {
@@ -66,7 +66,7 @@
     padding: 5px;
     width: 85%;
     background: linear-gradient(.2turn, @second-color, @prime-color);
-    .rounded-corners;
+    .section-corners;
 
     &:hover {
         cursor: pointer;
