--- a/resources/less/mod-main.less
+++ b/resources/less/mod-main.less
@@ -5,7 +5,7 @@
 #main-container {
     color: @complement-color;
     background-color: @fg-color;
-    .box-shadow;
+    .section-shadow;
     padding: 10px;
 }
 
