--- a/resources/less/mod-latest.less
+++ b/resources/less/mod-latest.less
@@ -1,111 +1,119 @@
-/* =================== M O S T   R E C E N T   S E C T I O N ==================  */
-#p_title{
-  margin: 0 0 10px 0;
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+==================== M O S T   R E C E N T   S E C T I O N ====================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+
+#latest-title {
+    .title;
 }
-#p_author{
-  margin: 0;
+
+#latest-author {
+   .subtitle;
 }
-#p_date{
-  font-weight: normal;
-  margin: 0;
+
+#latest-date {
+    .quote;
 }
-#p_rating{
-  margin: 10px 0;
+
+#latest-rating {
+    margin: 10px 0;
 }
-.rate{
+
+.rate {
     color: #fd4;
 }
-.tag > a{
-  display: inline-block;
-  padding: 5px 10px;
-  margin: 0 10px 10px 0;
-  border: #0E1C27 solid 1px;
-  border-radius: 10px;
-  text-decoration: none;
-  font-weight: bold;
-  color: #0E1C27;
+
+.tag {
+    display: inline-block;
+    padding: 5px 10px;
+    margin: 0 5px;
+    .tag-corners;
+    .paragraph;
+    font-weight: bold;
 }
-.p_img-container{
-  overflow: hidden;
-  text-align: center;
-  margin: 20px 0;
+
+.latest-body {
+    display: flex;
+    flex-direction: column;
 }
-.p_img-container > img{
-    height: 400px;
-    width: 600px;
-    object-fit: fill;
-}
-#p_img{
-    height:500px;
-    width:800px;
-}
-#p_description, .p_paragraphs{
-  text-align: justify;
-  letter-spacing: .2px;
-  font-stretch: wider;
-}
-.p_body{
-    text-align:center;
-    justify-content: center;
-}.button-container{
-  text-align: center;
-}
-.button {
-  display: inline-block;
-  border: none;
-  color:#0E1C27;
-  text-decoration: none;
-  background-color: #71E7F5;
-  box-shadow: lightgray 0px 5px 5px;
-  font-size: 15pt;
-  font-weight: bold;
-  letter-spacing: 2px;
-  padding: 1em;
-  width: 80%;
-}
-.button:hover{
-    cursor: pointer;
-}
-@media screen and (min-width:700px){
-  #p_title{
-    margin: 30px 0;
-  }
-  #p_meta{
-    display: grid;
-    grid-template: "author rating"
-                   "date   tags";
-  }
-  #p_author{
-    grid-area: author;
-  }
-  #p_date{
-    grid-area: date;
-  }
-  #p_rating{
-    text-align: end;
-    grid-area: rating;
-  }
-  #p_tags{
-    text-align: end;
-    grid-area:tags;
-  }
-}
-@media screen and (min-width:1024px){
-  .about_post-container{
-    display: grid;
-    grid-template: auto / auto auto;
-    grid-gap: 80px;
-    align-items: flex-start;
-  }
-  .pc{
-    margin: auto;
-    width:800px;
-    margin-bottom: 30px;
+
+.latest-img-container {
+    display: flex;
+    justify-content: justify;
+    text-align: center;
+    overflow: hidden;
+    margin: 10px 0;
+
+    img {
+        width: 100%;
+        object-fit: contain;
     }
-  .p_img-container{
-    margin:40px 0;
-  }
-  #p_description, .p_paragraphs{
-    font-size: 1.2em;
+}
+
+#latest-description-container {
+    margin: 10px 0;
+    .paragraph;
+}
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+======================== M E D I A   Q U E R I E S ============================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+
+@media screen and (min-width:700px) {
+    #latest-meta {
+        display: grid;
+        grid-template: "author rating" "date   tags";
+    }
+
+    #latest-author {
+        grid-area: author;
+    }
+
+    #latest-date {
+        grid-area: date;
+    }
+
+    #latest-rating {
+        text-align: end;
+        grid-area: rating;
+    }
+
+    #latest-tags {
+        text-align: end;
+        grid-area: tags;
+    }
+    .latest-img-container > img {
+        max-height: 600px;
+    }
+}
+// @media screen and (min-width:1024px) {
+//     .latest-img-container > img {
+//         height: initial;
+//     }
+//     #latest-description-container {
+//         font-size: @base-font-size + 5px;
+//     }
+// }
+
+@media screen and (min-width: 1500px) {
+    .latest-body {
+        display: grid;
+        grid-template: auto auto auto / auto 1fr;
+        grid-column-gap: 40px;
+    }
+    .latest-img-container{
+        grid-row: 1 / 4;
+        grid-column: 1 / 2;
+        text-align: center;
+        img{
+            width: 500px;
+            height: 400px;
+        }
+    }
+    .latest-description-container{
+        grid-row: 1 / 3;
+        grid-column: 2 / 3;
+    }
+    .latest-button-container {
+        grid-row: 3 / 4;
+        grid-column: 2/ 3;
     }
 }
