[Implementation/Refactor] Less Publication Module

--- a/resources/less/_config.less
+++ b/resources/less/_config.less
@@ -113,3 +113,10 @@
     margin: 0;
     color: @complement-color;
 }
+
+.image-disposition(@width: 250px, @height: 250px){
+    width: @width;
+    height: @height;
+    max-height: 500px;
+    object-fit: cover;
+}
