--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -3,6 +3,7 @@
 .init;
 @import 'mod-header.less';
 @import 'mod-main.less';
+@import 'mod-publication.less';
 @import 'mod-latest.less';
 @import 'mod-about.less';
 @import 'mod-related.less';
@@ -24,7 +25,7 @@
     text-decoration: none;
     background-color: @prime-color;
     .button-shadow;
-    font-size: @base-font-size + 10px;
+    font-size: @title-font-size;
     font-weight: bold;
     letter-spacing: 2px;
     padding: 10px;
