--- a/resources/less/mod-about.less
+++ b/resources/less/mod-about.less
@@ -1,5 +1,10 @@
-/* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
- /*<!-- =================== R A T I N G   A N D   A B O U T   A U T H O R =================== --> */
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+============================ A B O U T   A U T H O R ===========================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+================================== R A T I N G ==================================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
 .about_post-container{
     display: flex;
     flex-direction: column;
