--- a/public/css/index.css
+++ b/public/css/index.css
@@ -591,25 +591,30 @@ p {
   }
 }
 /* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-==================== M O S T   R E C E N T   S E C T I O N ====================
+============================== P U B L I C A T I O N ===========================
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
-#latest-title {
+.publication-container {
+  margin: auto;
+  width: 90%;
+  max-width: 800px;
+}
+.publication-title {
   margin: 5px 0;
   font-size: 25px;
   font-weight: bold;
   color: #0E1C27;
 }
-#latest-author {
+.publication-author {
   font-size: 20px;
   font-weight: bold;
   color: #0E1C27;
 }
-#latest-date {
+.publication-date {
   font-weight: normal;
   margin: 0;
   color: #0E1C27;
 }
-#latest-rating {
+.publication-rating {
   margin: 10px 0;
 }
 .rate {
@@ -627,21 +632,90 @@ p {
   font-stretch: wider;
   font-weight: bold;
 }
-.latest-body {
+.publication-body {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 10px 0;
+}
+.publication-img-container {
+  overflow: hidden;
+  margin: 10px auto;
+}
+.publication-img-container img {
+  width: 100%;
+  height: 300px;
+  max-height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.publication-paragraph {
+  margin: 20px 0;
+  font-size: 18px;
+  color: #0E1C27;
+  letter-spacing: 0.2px;
+  text-align: justify;
+  font-stretch: wider;
+}
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+======================== M E D I A   Q U E R I E S ============================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+@media screen and (min-width: 700px) {
+  .publication-meta {
+    display: grid;
+    grid-template: "author rating" "date tags";
+  }
+  .publication-author {
+    grid-area: author;
+  }
+  .publication-date {
+    grid-area: date;
+  }
+  .publication-rating {
+    text-align: end;
+    grid-area: rating;
+  }
+  .tags-container {
+    text-align: end;
+    grid-area: tags;
+  }
+  .publication-img-container > img {
+    width: 600px;
+    height: 400px;
+    max-height: 500px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+@media screen and (min-width: 1500px) {
+  .publication-img-container > img {
+    width: 100%;
+    height: 500px;
+    max-height: 500px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+==================== M O S T   R E C E N T   S E C T I O N ====================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+#latest-body {
   display: flex;
   flex-direction: column;
 }
-.latest-img-container {
+#latest-img-container {
   display: flex;
   justify-content: justify;
   text-align: center;
   overflow: hidden;
   margin: 10px 0;
 }
-.latest-img-container img {
+#latest-img-container img {
   width: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  height: 100%;
+  max-height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #latest-description-container {
   margin: 10px 0;
@@ -655,54 +729,47 @@ p {
 ======================== M E D I A   Q U E R I E S ============================
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
 @media screen and (min-width: 700px) {
-  #latest-meta {
-    display: grid;
-    grid-template: "author rating" "date   tags";
-  }
-  #latest-author {
-    grid-area: author;
-  }
-  #latest-date {
-    grid-area: date;
-  }
-  #latest-rating {
-    text-align: end;
-    grid-area: rating;
-  }
-  #latest-tags {
-    text-align: end;
-    grid-area: tags;
-  }
-  .latest-img-container > img {
-    max-height: 600px;
+  #latest-img-container > img {
+    width: 100%;
+    height: 400px;
+    max-height: 500px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 @media screen and (min-width: 1500px) {
-  .latest-body {
+  #latest-body {
     display: grid;
     grid-template: auto auto auto / auto 1fr;
     grid-column-gap: 40px;
   }
-  .latest-img-container {
+  #latest-img-container {
     grid-row: 1 / 4;
     grid-column: 1 / 2;
     text-align: center;
   }
-  .latest-img-container img {
+  #latest-img-container img {
     width: 500px;
     height: 400px;
+    max-height: 500px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
-  .latest-description-container {
+  #latest-description-container {
     grid-row: 1 / 3;
     grid-column: 2 / 3;
   }
-  .latest-button-container {
+  #latest-button-container {
     grid-row: 3 / 4;
     grid-column: 2/3;
   }
 }
-/* <!-- --# # # # # # # # # # # # # # # # # # # # # # # # # # # # # #-- -->
- /*<!-- =================== R A T I N G   A N D   A B O U T   A U T H O R =================== --> */
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+============================ A B O U T   A U T H O R ===========================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+================================== R A T I N G ==================================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
 .about_post-container {
   display: flex;
   flex-direction: column;
