--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -9,36 +9,4 @@
 @import 'mod-related.less';
 @import 'mod-footer.less';
 @import 'mod-admin.less';
-
-.button-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    text-align: center;
-}
-
-.button {
-
-    display: block;
-    border: none;
-    color: @complement-color;
-    text-decoration: none;
-    background-color: @prime-color;
-    .button-shadow;
-    font-size: @title-font-size;
-    font-weight: bold;
-    letter-spacing: 2px;
-    padding: 10px;
-    width: 95%;
-    margin: 10px 0;
-
-    &:hover {
-        cursor: pointer;
-    }
-}
-
-// @media screen and (min-width:1024px) {
-//     .button {
-//         width: 70%;
-//     }
-// }
+@import 'mod-form.less';
