--- a/public/css/index.css
+++ b/public/css/index.css
@@ -414,6 +414,29 @@ p {
 .hidden {
   display: none;
 }
+.button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+}
+.button {
+  display: block;
+  border: none;
+  color: #0E1C27;
+  text-decoration: none;
+  background-color: #71E7F5;
+  box-shadow: rgba(14, 28, 39, 0.5) 0px 3px 2px 0px;
+  font-size: 25px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding: 10px;
+  width: 95%;
+  margin: 10px 0;
+}
+.button:hover {
+  cursor: pointer;
+}
 /* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 ================================= H E A D E R =================================
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
@@ -422,6 +445,7 @@ p {
   position: sticky;
   top: 0;
   min-width: 320px;
+  max-height: 100vh;
   background: linear-gradient(0.2turn, #0E1C27, #0A1C47);
   color: #FEFEFE;
   box-shadow: rgba(14, 28, 39, 0.5) 0px 1px 5px 2px;
@@ -453,7 +477,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 90%;
 }
 #nav-menu {
   height: 90vh;
@@ -517,6 +541,9 @@ p {
   }
   #nav-menu {
     height: 100%;
+  }
+  #mobile-nav-menu {
+    max-height: 75vh;
   }
 }
 /* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -1069,27 +1096,58 @@ p {
 .forgot-pass {
   font-size: 15px;
 }
-.button-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  text-align: center;
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+================================ F O R M =======================================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+.form-container {
+  height: 100%;
 }
-.button {
-  display: block;
-  border: none;
-  color: #0E1C27;
-  text-decoration: none;
-  background-color: #71E7F5;
-  box-shadow: rgba(14, 28, 39, 0.5) 0px 3px 2px 0px;
-  font-size: 25px;
+.form {
+  display: grid;
+  grid-template: auto / 1fr;
+  margin: auto;
+}
+.form-label {
+  display: inline-block;
+  font-size: 20px;
   font-weight: bold;
-  letter-spacing: 2px;
-  padding: 10px;
+  color: #0E1C27;
+  margin: 10px 0 0 0;
+  width: 90%;
+}
+.form-input {
   width: 95%;
+  height: auto;
+  margin: 5px 0;
+  padding: 5px;
+}
+.comments {
+  resize: none;
+  height: 100px;
+  width: 100%;
   margin: 10px 0;
 }
-.button:hover {
-  cursor: pointer;
+.form-check {
+  width: 15px;
+  height: 15px;
+  margin: 10px 0;
+}
+@media screen and (min-width: 1024px) {
+  .form {
+    width: 60%;
+    font-size: 1.3em;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .button {
+    font-size: 1.2em;
+    grid-area: button;
+    width: 60%;
+  }
+}
+@media screen and (min-width: 1300px) {
+  .form {
+    width: 50%;
+  }
 }
 
