--- a/resources/less/mod-header.less
+++ b/resources/less/mod-header.less
@@ -6,6 +6,7 @@
     position: sticky;
     top: 0;
     min-width: 320px;
+    max-height: 100vh;
     background: linear-gradient(0.2turn, @complement-color, @third-color);
     color: @fg-color;
     .section-shadow;
@@ -43,7 +44,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    height: 90%;
 }
 
 #nav-menu {
@@ -121,5 +122,8 @@
 
     #nav-menu {
         height: 100%;
+    }
+    #mobile-nav-menu{
+        max-height: 75vh;
     }
 }
