[Refactor] Less Registration Form

--- a/resources/less/mod-form.less
+++ b/resources/less/mod-form.less
@@ -39,6 +39,22 @@
     height: 15px;
     margin: 10px 0;
 }
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+=========================== R E G I S T R A T I O N ============================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+.registration{
+    display: grid;
+    grid-template: auto / 450px 450px;
+    grid-column-gap: 20px;
+    width: 1000px;
+    margin:0 !important;
+}
+.form-section{
+    width:100%;
+}
+/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+======================== M E D I A   Q U E R I E S ============================
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
 
 @media screen and (min-width:1024px) {
     .form {
