--- a/resources/less/_config.less
+++ b/resources/less/_config.less
@@ -69,8 +69,7 @@
     }
 
     .button {
-
-        display: block;
+        display: inline-block;
         border: none;
         color: @complement-color;
         text-decoration: none;
@@ -81,7 +80,6 @@
         letter-spacing: 2px;
         padding: 10px;
         width: 95%;
-        margin: 10px 0;
 
         &:hover {
             cursor: pointer;
