--- a/resources/less/mod-latest.less
+++ b/resources/less/mod-latest.less
@@ -36,8 +36,8 @@
 @media screen and (min-width: 1500px) {
     #latest-body {
         display: grid;
-        grid-template: auto auto auto / auto 1fr;
-        grid-column-gap: 40px;
+        grid-template: 1fr 1fr auto / auto 1fr;
+        grid-column-gap: 20px;
     }
 
     #latest-img-container {
@@ -58,5 +58,6 @@
     #latest-button-container {
         grid-row: 3 / 4;
         grid-column: 2/ 3;
+        width:100%;
     }
 }
