--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -10,4 +10,5 @@
 @import 'mod-footer.less';
 @import 'mod-admin.less';
 @import 'mod-form.less';
-@import 'mod-notice.less';
+@import 'mod-notification.less';
+@import 'mod-rating.less';
