--- a/resources/less/mod-admin.less
+++ b/resources/less/mod-admin.less
@@ -141,32 +141,32 @@
     margin-top: 20px;
   }
 /* =================== N A V   R E G I S T E R / L O G I N ======================= */
-  .admin-nav-list{
-      display:flex;
-      position: relative;
-      left: -30px;
-      margin: 10px 0;
-      opacity: 0;
-      list-style: none;
-  }
-  .admin-nav-list:hover{
-      cursor: default;
-  }
-  .admin-nav-link{
-      font-size: 1em;
-      margin:0 5px;
-      color: #FEFEFE;
-      text-decoration: none;
-  }
-  .admin-nav-link:hover{
-      cursor:default;
-  }
-  .invalid-feedback{
-      display:block;
-      margin: 0;
-      color: @warning-fail-color;
-      font-size: 15px;
-  }
-  .forgot-pass{
-      font-size: 15px;
-  }
+//   .admin-nav-list{
+//       display:flex;
+//       position: relative;
+//       left: -30px;
+//       margin: 10px 0;
+//       opacity: 0;
+//       list-style: none;
+//   }
+//   .admin-nav-list:hover{
+//       cursor: default;
+//   }
+//   .admin-nav-link{
+//       font-size: 1em;
+//       margin:0 5px;
+//       color: #FEFEFE;
+//       text-decoration: none;
+//   }
+//   .admin-nav-link:hover{
+//       cursor:default;
+//   }
+//   .invalid-feedback{
+//       display:block;
+//       margin: 0;
+//       color: @warning-fail-color;
+//       font-size: 15px;
+//   }
+//   .forgot-pass{
+//       font-size: 15px;
+//   }
