[Front End Refactor]

--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -1,6 +1,7 @@
 @import '_config';
 
 .init;
+@import 'mod-home.less';
 @import 'mod-header.less';
 @import 'mod-main.less';
 @import 'mod-publication.less';
