--- a/resources/less/mod-header.less
+++ b/resources/less/mod-header.less
@@ -1,129 +1,159 @@
-/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-================================= H E A D E R =================================
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+/* # # # # # # # # # # # # # */
+/*        H E A D E R        */
+/* v v v v v v v v v v v v v */
 
-#header-container {
+#header-section-container{
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    background-color: @WEB_NAV_BG_COLOR;
+    display:grid;
+    grid-template: minmax(auto,100px) auto / auto;
+    grid-auto-rows: 50px;
+
     position: sticky;
     top: 0;
-    min-width: 320px;
-    max-height: 100vh;
-    background: linear-gradient(0.2turn, @complement-color, @third-color);
-    color: @fg-color;
-    .section-shadow;
-}
+    left: 0;
 
-#header-mobile-container {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-}
-
-#home-link {
-    color: @fg-color;
-}
-
-#logotype-container {
-    display: flex;
-    align-items: center;
-}
-
-#type {
-    display: inline;
-    margin: 0 0 0 20px;
-}
-
-/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-======================== N A V I G A T I O N   M E N U =========================
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
-
-#mobile-nav-icon {
-    .icon-size;
-}
-
-#mobile-nav-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 90%;
-}
-
-#nav-menu {
-    height: 90vh;
-    background-image: url("@{images}bg-graphics.png");
-    background-size: 80%;
-}
-
-.nav-components {
-    padding: 0;
-    text-align: center;
-}
-
-.nav-component {
-    margin: 5px 0 5px 0;
-}
-
-.section {
-    font-weight: bold;
-    padding: 5px;
-    width: 85%;
-    background: linear-gradient(.2turn, @second-color, @prime-color);
-    .section-corners;
-
-    &:hover {
-        cursor: pointer;
-        transform: scaleX(1.1)
-    }
-
-    &:active {
-        transform: scaleX(1.2);
+    a {
+        color: @WEB_NAV_FONT_COLOR;
+        text-decoration: none;
+        display: grid;
     }
 }
 
-/* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-======================== M E D I A   Q U E R I E S ============================
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
-
-@media screen and (min-width:700px) {
-    #nav-menu {
-        height: 100vh;
-    }
-
-    .section {
-        .web-font-size(5px);
-    }
+#header-logotype-container {
+    grid-row: 1 / 2;
+    margin: 20px 0;
+}
+#logotype {
+    grid-row: 1/2;
+    height: 50px;
+    margin:auto;
+}
+#title {
+    grid-row: 2/3;
+    margin: auto;
+    color: @WEB_FG_COLOR;
+    font-size: 25px !important;
+    letter-spacing: 1px;
 }
 
-@media screen and (min-width: 1280px) {
-    #type {
-        .web-font-size(15px);
-        letter-spacing: 2px;
-        margin: 10px auto;
-    }
+/* # # # # # # # # # # # # # */
+/*    N A V I G A T I O N    */
+/* v v v v v v v v v v v v v */
 
-    #mobile-nav-icon {
-        display: none;
-    }
-
-    #header-container {
-        grid-column: 1;
-        position: sticky;
-        left: 0;
-        overflow: hidden;
-    }
-
-    #header-mobile-container {
-        justify-content: center;
-    }
-
-    #logotype-container {
-        align-items: center;
-        flex-direction: column;
-    }
-
-    #nav-menu {
-        height: 100%;
-    }
-    #mobile-nav-menu{
-        max-height: 75vh;
-    }
+#header-navigation-container{
+    grid-row: 2 / 7;
+    margin: 20px 0;
+    padding: 0 10px;
+    font-family: @WEB_NAV_FONT;
+    letter-spacing: 2px;
 }
+
+#header-navigation-list {
+    list-style: none;
+    display: grid;
+    grid-template: auto / 1fr;
+    grid-row-gap: 10px;
+    margin: 20px 0;
+}
+
+.navigation-item:hover{
+    border-bottom: 1px solid;
+}
+
+// /* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+// ======================== N A V I G A T I O N   M E N U =========================
+// # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+
+// #mobile-nav-icon {
+//     .icon-size;
+// }
+
+// #mobile-nav-menu {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-between;
+//     height: 90%;
+// }
+
+// #nav-menu {
+//     height: 90vh;
+//     background-image: url("@{images}bg-graphics.png");
+//     background-size: 80%;
+// }
+
+// .nav-components {
+//     padding: 0;
+//     text-align: center;
+// }
+
+// .nav-component {
+//     margin: 5px 0 5px 0;
+// }
+
+// .section {
+//     font-weight: bold;
+//     padding: 5px;
+//     width: 85%;
+//     background: linear-gradient(.2turn, @second-color, @prime-color);
+//     .section-corners;
+
+//     &:hover {
+//         cursor: pointer;
+//         transform: scaleX(1.1)
+//     }
+
+//     &:active {
+//         transform: scaleX(1.2);
+//     }
+// }
+
+// /* # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+// ======================== M E D I A   Q U E R I E S ============================
+// # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
+
+// @media screen and (min-width:700px) {
+//     #nav-menu {
+//         height: 100vh;
+//     }
+
+//     .section {
+//         .web-font-size(5px);
+//     }
+// }
+
+// @media screen and (min-width: 1280px) {
+//     #type {
+//         .web-font-size(15px);
+//         letter-spacing: 2px;
+//         margin: 10px auto;
+//     }
+
+//     #mobile-nav-icon {
+//         display: none;
+//     }
+
+//     #header-container {
+//         grid-column: 1;
+//         position: sticky;
+//         left: 0;
+//         overflow: hidden;
+//     }
+
+//     #header-mobile-container {
+//         justify-content: center;
+//     }
+
+//     #logotype-container {
+//         align-items: center;
+//         flex-direction: column;
+//     }
+
+//     #nav-menu {
+//         height: 100%;
+//     }
+//     #mobile-nav-menu{
+//         max-height: 75vh;
+//     }
+// }
