--- a/resources/less/mod-publication.less
+++ b/resources/less/mod-publication.less
@@ -2,9 +2,9 @@
 ============================== P U B L I C A T I O N ===========================
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # */
 .publication-container{
-    margin: auto;
-    width: 90%;
-    max-width: 800px;
+    // margin: auto;
+    // width: 90%;
+    // max-width: 800px;
 }
 .publication-title {
     .title;
