--- a/resources/less/index.less
+++ b/resources/less/index.less
@@ -13,9 +13,8 @@
 
 /* Color Theme Swatches in Hex */
 @WEB_NAV_BG_COLOR: #0A1526;
-@lluzardocom-v2-0-2-hex: #0E214D;
-@WEB_SEP_COLOR: #2BA3FF;
-@lluzardocom-v2-0-4-hex: #0595E8;
+@WEB_BUTTON_COLOR: #0E214D;
+@WEB_SECTION_COLOR: #2BA3FF;
 @WEB_NAV_FONT_COLOR: #6CC7FF;
 @WEB_FG_COLOR: #E5F0FC;
 
@@ -45,7 +44,7 @@
         height: 100vh;
         width: 100vw;
         display: grid;
-        grid-template:  1fr auto / minmax(auto,250px) auto minmax(auto,250px) ;
+        grid-template:  1fr auto / minmax(auto,210px) auto minmax(auto,250px) ;
         font-family: @base-font-family, sans-serif;
 
         // font-size: @base-font-size;
@@ -161,9 +160,8 @@
 @import 'mod-aside.less';
 @import 'mod-main.less';
 @import 'mod-publication.less';
-@import 'mod-latest.less';
+@import 'mod-blog.less';
 @import 'mod-about.less';
-@import 'mod-related.less';
 @import 'mod-footer.less';
 @import 'mod-admin.less';
 @import 'mod-form.less';
